--- a/ar.html
+++ b/ar.html
@@ -3,90 +3,30 @@
   <head>
     <meta charset="utf-8">
     <title>3D Model AR Viewer</title>
-    <script src="https://cdn.jsdelivr.net/npm/three@0.132.2/build/three.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/three@0.132.2/examples/js/loaders/GLTFLoader.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/three@0.132.2/examples/js/controls/OrbitControls.js"></script>
-    <script src="arBase.js"></script>
-    <script src="arInteraction.js"></script>
     <style>
-      body { margin: 0; }
-      #info { 
-        position: absolute; 
-        top: 10px; 
-        left: 10px; 
-        color: #000;
-        font-family: Arial, sans-serif;
-        font-size: 16px;
-        background: rgba(255, 255, 255, 0.7);
-        padding: 5px 10px;
-        border-radius: 4px;
+      html, body { margin: 0; padding: 0; width: 100vw; height: 100vh; background: transparent; overflow: hidden; }
+      #arBtn {
+        position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%);
+        z-index: 10; padding: 16px 32px; font-size: 18px; border-radius: 8px; border: none;
+        background: #2196F3; color: #fff; font-weight: bold; cursor: pointer;
       }
-      #roseBtn, #tulipBtn, #undoBtn, #deleteBtn, #arBtn { 
-        position: absolute; 
-        top: 40px; 
-        z-index: 2; 
-        margin: 0 5px;
-        padding: 8px 16px;
-        border: none;
-        border-radius: 4px;
-        background: #4CAF50;
-        color: white;
-        cursor: pointer;
-        transition: background 0.3s;
-        font-family: Arial, sans-serif;
-        font-size: 14px;
-        font-weight: bold;
-      }
-      #roseBtn:hover, #tulipBtn:hover, #undoBtn:hover, #deleteBtn:hover, #arBtn:hover {
-        background: #45a049;
+      .ar-ui-btn {
+        position: absolute; top: 20px; z-index: 10; display: none;
+        padding: 8px 16px; border: none; border-radius: 4px; background: #4CAF50; color: white; font-weight: bold; margin-right: 10px;
       }
       #roseBtn { left: 10px; }
-      #tulipBtn { left: 90px; }
-      #undoBtn { left: 170px; }
-      #deleteBtn { left: 250px; }
-      #arBtn { left: 330px; }
-      #deleteBtn.delete-mode { 
-        background: #e74c3c; 
-        color: #fff; 
-      }
-      #arBtn.active {
-        background: #2196F3;
-      }
+      #tulipBtn { left: 110px; }
+      #undoBtn { left: 210px; }
+      #deleteBtn { left: 310px; }
+      #deleteBtn.delete-mode { background: #e74c3c; }
     </style>
   </head>
   <body>
-    <div id="info">3D Model AR Viewer</div>
-    <button id="roseBtn">Rose</button>
-    <button id="tulipBtn">Tulip</button>
-    <button id="undoBtn">Undo</button>
-    <button id="deleteBtn">Delete</button>
     <button id="arBtn">Start AR</button>
-    <script>
-      const App = window.FlowerApp;
-      App.initScene();
-      initInteractions(App);
-
-      // AR mode toggle
-      const arBtn = document.getElementById('arBtn');
-      let arActive = false;
-
-      arBtn.onclick = async function() {
-        if (!arActive) {
-          const success = await App.startAR();
-          if (success) {
-            arActive = true;
-            arBtn.textContent = 'Exit AR';
-            arBtn.classList.add('active');
-          }
-        } else {
-          App.stopAR();
-          arActive = false;
-          arBtn.textContent = 'Start AR';
-          arBtn.classList.remove('active');
-        }
-      };
-
-      App.animate();
-    </script>
+    <button id="roseBtn" class="ar-ui-btn">Rose</button>
+    <button id="tulipBtn" class="ar-ui-btn">Tulip</button>
+    <button id="undoBtn" class="ar-ui-btn">Undo</button>
+    <button id="deleteBtn" class="ar-ui-btn">Delete</button>
+    <script type="module" src="ar-xr.js"></script>
   </body>
-</html>
+</html> 
